"Шапка" main-у та "Особливості"
Заголовок та список "Особливості" додано

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <!-- Шапка сайту-->
     <header>
-        <a href="index.html">WebStudio</a>
-
-        <ul>
-            <li><a href="">Студія</a></li>
-            <li><a href="">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
-        </ul>
+        <nav>
+            <a href="index.html">WebStudio</a>
+            
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
+            </ul>
+        </nav>
 
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -23,6 +25,36 @@
         </address>
 
     </header>
+
+    <main>
+        <!-- Головна частина - Шапка -->
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>
+                Замовити послугу
+            </button>
+        </section>
+
+        <!-- Особливості-->
+        <ul>
+            <li>
+                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            </li>
+            <li>
+                <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li>
+                <h3>ПЛАНУВАННЯ</h3>
+                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            </li>
+            <li>
+                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
+        </ul>
+    </main>
     
 </body>
 </html>
