Доробив main + фото
виправив дещо у шапці, додав 2 і 3-й сектор

--- a/index.html
+++ b/index.html
@@ -36,24 +36,77 @@
         </section>
 
         <!-- Особливості-->
-        <ul>
-            <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
+        <section>
+            <h2>Особливості</h2>
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Чим ми займаємося -->
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <a href="/">
+                    <img src="./images/whatwedo01.jpeg" alt="Десктопні додатки" width="370" height="294"></a>
+                </li>
+                <li>
+                    <a href="/">
+                    <img src="./images/whatwedo02.jpeg" alt="Мобільні додатки" width="370" height="294"></a>
+                </li>
+                <li>
+                    <a href="/">
+                    <img src="./images/whatwedo03.jpeg" alt="Дизайнерські рішення" width="370" height="294"></a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Наша команда -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <a href="/">
+                        <img src="./images/ourteam1-demjanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">Ігор Дем'яненко
+                        <p>Product Designer</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <img src="./images/ourteam2-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">Ольга Рєпіна
+                        <p>Frontend Developer</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <img src="./images/ourteam3-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">Микола Тарасов
+                        <p>Marketing</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/">
+                        <img src="./images/ourteam4-yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">Михайло Єрмаков
+                        <p>UI Designer</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     
 </body>
