--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             </ul>
         </section>
     </main>
-    
+    <!-- Футер-->
+    <footer>
+        <a href="index.html">WebStudio</a>
+
+        <address>
+            м. Київ, пр-т Лесі Українки, 26
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
