--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <a href="index.html">WebStudio</a>
             
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
+                <li><a href="./index.html">Студія</a></li>
+                <li><a href="./portfolio.html">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
@@ -23,7 +23,6 @@
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
     </header>
 
     <main>
