Редактнув секцію "Наша команда"
додав тег <p> до кожного учасника команди. До цього нічим не було обгорнуте. Просто текст був

--- a/index.html
+++ b/index.html
@@ -80,25 +80,29 @@
             <ul>
                 <li>
                     <a href="/">
-                        <img src="./images/ourteam1-demjanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">Ігор Дем'яненко
+                        <img src="./images/ourteam1-demjanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                        <p>Ігор Дем'яненко</p>
                         <p>Product Designer</p>
                     </a>
                 </li>
                 <li>
                     <a href="/">
-                        <img src="./images/ourteam2-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">Ольга Рєпіна
+                        <img src="./images/ourteam2-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                        <p>Ольга Рєпіна</p>
                         <p>Frontend Developer</p>
                     </a>
                 </li>
                 <li>
                     <a href="/">
-                        <img src="./images/ourteam3-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">Микола Тарасов
+                        <img src="./images/ourteam3-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <p>Микола Тарасов</p>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a href="/">
-                        <img src="./images/ourteam4-yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">Михайло Єрмаков
+                        <img src="./images/ourteam4-yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <p>Михайло Єрмаков</p>
                         <p>UI Designer</p>
                     </a>
                 </li>
