--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <a href="/">
-                    <img src="./images/whatwedo01.jpeg" alt="Десктопні додатки" width="370" height="294"></a>
+                    <img src="./images/whatwedo01.jpeg" alt="Десктопні додатки" width="370" height="294">
                 </li>
                 <li>
-                    <a href="/">
-                    <img src="./images/whatwedo02.jpeg" alt="Мобільні додатки" width="370" height="294"></a>
+                    <img src="./images/whatwedo02.jpeg" alt="Мобільні додатки" width="370" height="294">
                 </li>
                 <li>
-                    <a href="/">
-                    <img src="./images/whatwedo03.jpeg" alt="Дизайнерські рішення" width="370" height="294"></a>
+                    <img src="./images/whatwedo03.jpeg" alt="Дизайнерські рішення" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -79,32 +76,24 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <a href="/">
                         <img src="./images/ourteam1-demjanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                        <p>Ігор Дем'яненко</p>
+                        <h3>Ігор Дем'яненко</h3>
                         <p>Product Designer</p>
-                    </a>
                 </li>
                 <li>
-                    <a href="/">
                         <img src="./images/ourteam2-repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                        <p>Ольга Рєпіна</p>
+                        <h3>Ольга Рєпіна</h3>
                         <p>Frontend Developer</p>
-                    </a>
                 </li>
                 <li>
-                    <a href="/">
                         <img src="./images/ourteam3-tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-                        <p>Микола Тарасов</p>
+                        <h3>Микола Тарасов</h3>
                         <p>Marketing</p>
-                    </a>
                 </li>
                 <li>
-                    <a href="/">
                         <img src="./images/ourteam4-yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                        <p>Михайло Єрмаков</p>
+                        <h3>Михайло Єрмаков</h3>
                         <p>UI Designer</p>
-                    </a>
                 </li>
             </ul>
         </section>
@@ -114,7 +103,7 @@
         <a href="index.html">WebStudio</a>
 
         <address>
-            м. Київ, пр-т Лесі Українки, 26
+            <a href="https://goo.gl/maps/ySmGjcdxqGTYYULQ9" target="_blank" rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
